--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="_external\NonStandardFunction.h">
       <Filter>_external</Filter>
     </ClInclude>
+    <ClInclude Include="execTapeCmd.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -244,6 +247,9 @@
     </ClCompile>
     <ClCompile Include="_external\NonStandardFunction.cpp">
       <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="execTapeCmd.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
