--- a/DiscImageCreator/makefile
+++ b/DiscImageCreator/makefile
@@ -52,6 +52,8 @@ SOURCES_CXX := \
   _external/rijndael-alg-fst.o \
   _external/tinyxml2.o \
   _external/sha1.o \
+  _external/sha224-256.o \
+  _external/sha384-512.o \
   _linux/defineForLinux.o
 
 OBJECTS := $(SOURCES_C:.c=.o) $(SOURCES_CXX:.cpp=.o)
