--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="_external\sha-private.h">
       <Filter>_external</Filter>
     </ClInclude>
+    <ClInclude Include="_external\xxhash.h">
+      <Filter>_external</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -264,6 +267,9 @@
       <Filter>_external</Filter>
     </ClCompile>
     <ClCompile Include="_external\sha1.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\xxhash.cpp">
       <Filter>_external</Filter>
     </ClCompile>
   </ItemGroup>
