--- a/DiscImageCreator/DiscImageCreator_linux.vcxproj
+++ b/DiscImageCreator/DiscImageCreator_linux.vcxproj
@@ -68,6 +68,7 @@
     </ProjectPublicIncludePath>
     <IncludePath>
     </IncludePath>
+    <TargetName>DiscImageCreator</TargetName>
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="calcHash.cpp" />
