--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="_external\xxhash.h">
       <Filter>_external</Filter>
     </ClInclude>
+    <ClInclude Include="_external\CheckSector.h">
+      <Filter>_external</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -270,6 +273,9 @@
       <Filter>_external</Filter>
     </ClCompile>
     <ClCompile Include="_external\xxhash.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\ECCEDC.cpp">
       <Filter>_external</Filter>
     </ClCompile>
   </ItemGroup>
