--- a/DiscImageCreator/DiscImageCreator_linux.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator_linux.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="_external\xxhash.cpp">
       <Filter>_external</Filter>
     </ClCompile>
+    <ClCompile Include="_external\ECCEDC.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calcHash.h">
@@ -282,6 +285,9 @@
       <Filter>_external</Filter>
     </ClInclude>
     <ClInclude Include="_external\xxhash.h">
+      <Filter>_external</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\CheckSector.h">
       <Filter>_external</Filter>
     </ClInclude>
   </ItemGroup>
