fixed makefile, meson.build

--- a/DiscImageCreator/makefile
+++ b/DiscImageCreator/makefile
@@ -55,6 +55,7 @@ SOURCES_CXX := \
   _external/aes.o \
   _external/crc16ccitt.o \
   _external/crc32.o \
+  _external/ECCEDC.o \
   _external/md5c.o \
   _external/NonStandardFunction.o \
   _external/platform_util.o \
